--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs
 /CCSuccessiveRefinement.Tests/bin/Debug/netcoreapp2.0
 /CCSuccessiveRefinement.Tests/obj/Debug/netcoreapp2.0
+/CCSuccessiveRefinement
